# genius-discord-bot

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.arm  README.md
.github/workflows/: action.yml
infra/setup/: actions.tf  main.tf  network.tf  outputs.tf  variables.tf
scripts/: generate.sh  genius-dl.sh
src/: genius_dl.rs  genius_img.rs  lib.rs  main.rs
src/discord/: commands.rs  mod.rs  setup.rs
src/discord/commands/: card.rs  mod.rs  query.rs  utils.rs
src/genius/: cards.rs  mod.rs  requests.rs
