[package]
name = "genius"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
jq-rs = "0.4.1"
magick_rust = {path = "../magick-rust"}
rand = "0.8.0"
regex = "1.5.4"
reqwest = "0.11"
scraper = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
textwrap = "0.16.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.4"

[dependencies.serenity]
version = "0.10"
features = ["model", "collector", "framework", "standard_framework"]
