[package]
name = "genius"
version = "0.2.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ab_glyph = "0.2.32"
anyhow = "1.0.66"
dotenv = "0.15.0"
image = "0.25.8"
imageproc = "0.25.0"
rand = "0.8.0"
regex = "1.5.4"
reqwest = "0.11"
scraper = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
textwrap = "0.16.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.4"

[dependencies.serenity]
version = "0.10"
features = ["model", "collector", "framework", "standard_framework"]
